// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM OPS Array nodes are rendered correctly 1`] = `
<div>
  <p>
    test
    more
  </p>
</div>
`;

exports[`DOM OPS Observable child nodes are rendered correctly 1`] = `<div />`;

exports[`DOM OPS Observable child nodes are rendered correctly 2`] = `
<div>
  <p>
    top
    immediate2
    foobar
    bottom
  </p>
</div>
`;

exports[`DOM OPS deep mount and unmount is called at the right time 1`] = `
<div>
  <p>
    <div>
      final
    </div>
  </p>
</div>
`;

exports[`DOM OPS mount and unmount is called at the right time 1`] = `
<div>
  <p>
    <div>
      final
    </div>
  </p>
</div>
`;

exports[`DOM OPS should handle teardown 1`] = `
<div>
  <div>
    <p>
      Data
    </p>
    <p>
      Data
    </p>
    <p>
      Data
    </p>
  </div>
</div>
`;
